do filter, fix style overflow

--- a/src/components/item-list/item-list.scss
+++ b/src/components/item-list/item-list.scss
@@ -29,13 +29,13 @@
   &__img {
     width: 40px;
     height: 40px;
-    border: 1px dashed red;
   }
 
   &__title {
     font-size: 17px;
     margin-right: 22px;
     min-width: 130px;
+    max-width: 150px;
 
     span {
       color: #6347F5;
