--- a/src/components/lists/lists.scss
+++ b/src/components/lists/lists.scss
@@ -3,4 +3,5 @@
   background: #F7F7FB;
   padding: 66px 88px 0;
   border-radius: 32px 0px 0px 0px;
+  overflow: scroll;
 }
